--- a/index.html
+++ b/index.html
@@ -9,8 +9,14 @@
     <meta name="author" content="brennan-lee" />
     <meta name="theme-color" content="#FFFFFF" />
     <title>GitHub page as PWA template</title>
-    <link rel="canonical" href="https://brennan-lee.github.io/6-01-pwa-2-05/" />
-    <link rel="manifest" href="/6-01-pwa-2-05/manifest.webmanifest" />
+    <link
+      rel="canonical"
+      href="https://brennan-lee-hub.github.io/6-01-pwa-2-05/"
+    />
+    <link
+      rel="manifest"
+      href="/6-01-pwa-2-05/manifest.webmanifest"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
     <!--- None blocking for Lighthouse report --->
     <!--- https://stackoverflow.com/questions/32759272/how-to-load-css-asynchronously --->
@@ -42,34 +48,39 @@
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
   </head>
-  <title>My first PWA</title>
+  <title>Salary Program, with JS</title>
   <body>
     <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
     <script src="./js/script.js"></script>
     <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
-      <header class="mdl-layout__header">
-        <div class="mdl-layout__header-row">
-          <span class="mdl-layout-title">My first PWA</span>
-        </div>
-      </header>
       <main class="mdl-layout__content">
-        <p></p>
-        <img
-          src="./images/notebook-animation.svg"
-          alt="Computer"
-          width="25%"
-          height="25%"
-        />
-        <p></p>
-        <!-- basic text -->
-        <p></p>
-        <div id="hello-world"></div>
-        <th>
-          <h2>please enter your employment infomation:</h2>
-        </th>
+        <table>
+          <tr>
+            <th>
+              <h2>Salary Program, with JS</h2>
+            </th>
+          </tr>
+        </table>
         <!-- Simple Textfield -->
+        <p>Please enter your employment information:</p>
         <form action="#">
-          <p>number of hours worked</p>
+          <p>Number of hours worked:</p>
+          <div class="mdl-textfield mdl-js-textfield">
+            <input
+              class="mdl-textfield__input"
+              type="text"
+              pattern="-?[0-9]*(\.[0-9]+)?"
+              id="hourly-rate"
+            />
+            <label class="mdl-textfield__label" for="hourly-rate"
+              >Hourly ...</label
+            >
+            <span class="mdl-textfield__error">Input is not a number!</span>
+          </div>
+        </form>
+        <!-- Numeric Textfield -->
+        <form action="#">
+          <p>Hourly rate:$</p>
           <div class="mdl-textfield mdl-js-textfield">
             <input
               class="mdl-textfield__input"
@@ -78,23 +89,7 @@
               id="number-of-hours-worked"
             />
             <label class="mdl-textfield__label" for="number-of-hours-worked"
-              >number of hours worked here ...</label
-            >
-            <span class="mdl-textfield__error">Input is not a number!</span>
-          </div>
-        </form>
-        <!-- Numeric Textfield -->
-        <form action="#">
-          <p>Hourly rate $</p>
-          <div class="mdl-textfield mdl-js-textfield">
-            <input
-              class="mdl-textfield__input"
-              type="text"
-              pattern="-?[0-9]*(\.[0-9]+)?"
-              id="Hourly-rate"
-            />
-            <label class="mdl-textfield__label" for="Hourly-rate"
-              >Hourly rate $ here ...</label
+              >How much hours ...</label
             >
             <span class="mdl-textfield__error">Input is not a number!</span>
           </div>
@@ -111,9 +106,9 @@
         <div id="answers">
           <div id="take"></div>
           <div id="wage"></div>
-          <div id="takeHomeSalary"></div>
         </div>
       </main>
     </div>
   </body>
 </html>
+
