--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>GitHub page as PWA template</title>
     <link
       rel="canonical"
-      href="https://brennan-lee-hub.github.io/6-01-pwa-2-05/"
+      href="https://brennan-lee.github.io/6-01-pwa-2-05/"
     />
     <link rel="manifest" href="/6-01-pwa-2-05/manifest.webmanifest" />
     <link rel="stylesheet" href="./css/styles.css" />
